--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <div class="cols">
         <div>
           <div style="display:flex; align-items:center; gap:12px; margin-bottom:10px">
-            <img src="image/Logofooter.png" alt="Logo KlikBus" style="height:38px" />
+            <img src="image/logofooter.png" alt="Logo KlikBus" style="height:38px" />
             <div>
               <strong>KlikBus</strong>
               <div class="muted" style="color:#0F172A">Aggregator Multi‑PO: Minibus, Medium & Big Bus</div>
