--- a/index.html
+++ b/index.html
@@ -275,14 +275,19 @@
         <div class="card" style="padding:16px">
           <h3 style="margin:0 0 6px 0">Info Penting</h3>
           <ul class="muted" style="margin:0 0 0 18px; line-height:1.6">
-            <li>DP untuk <em>lock</em> tanggal (kebijakan tiap PO bisa berbeda).</li>
-            <li>Biaya tol/parkir/BBM/driver menyesuaikan paket & PO.</li>
-            <li>Aturan titik jemput mengikuti kebijakan PO.</li>
-          </ul>
+  <li>DP diperlukan untuk <em>lock</em> tanggal (besaran mengikuti kebijakan PO).</li>
+  <li><strong>Titik jemput:</strong> dalam kota maksimal 2 titik yang searah ke tujuan. Di luar kota/tidak searah dikenakan biaya tambahan.</li>
+  <li><strong>Durasi pemakaian:</strong> 12/24 jam per hari sesuai paket. Overtime dikenakan biaya per jam sesuai kebijakan PO.</li>
+  <li>Biaya tol, parkir, BBM, dan uang makan/akomodasi driver menyesuaikan rute dan PO.</li>
+  <li>Pembatalan dan reschedule mengikuti kebijakan masing‑masing PO.</li>
+  <li>Pastikan jumlah penumpang & barang sesuai kapasitas. Mohon informasikan barang berukuran besar sebelumnya.</li>
+  <li>Rute ke area tertentu (mis. wisata pegunungan/akses sempit) mungkin memerlukan izin atau biaya tambahan.</li>
+  <li>Detail final (harga, fasilitas, itinerary) dikonfirmasi saat chat dengan Admin/PO.</li>
+</ul>
         </div>
       </aside>
     </section>
-    <section id="seo-lokasi" class="container" style="padding:4 24px 24px 24px">
+    <section id="seo-lokasi" class="container" style="padding:4px 24px 24px 24px">
       <div class="card" style="padding:16px">
         <h2 style="margin:0 0 8px 0">Layanan Sewa Bus di Sulawesi Selatan</h2>
         <p class="muted" style="margin:0 0 10px 0">Klik cepat ke pencarian PO berdasarkan kota/tujuan:</p>
