--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section class="hero">
     <div class="container hero-grid">
       <div>
-        <h1>Pemesanan Tiket Bus di Sulawesi</h1>
+        <h1>Pemesanan Tiket Bus <br> di Sulawesi</h1>
         <p>Pilih rute & tanggal keberangkatan, lalu lihat daftar mitra PO lengkap dengan jam keberangkatan masing-masing. Semua pesanan dapat langsung dikirim ke WhatsApp admin.</p>
         <div id="searchBox" class="search">
           <form id="searchForm">
