--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     .logo .dot{width:10px;height:10px;background:#02A4E4;border-radius:100%}
     .cta{margin-left:auto;display:flex;gap:10px;align-items:center}
     .btn{display:inline-flex;align-items:center;gap:10px;border:none;background:var(--brand);color:#fff;border-radius:12px;padding:14px 16px;font-weight:700;min-height:48px}
+    .btn:disabled{opacity:.5;cursor:not-allowed}
 
     .hero{position:relative;isolation:isolate;background:radial-gradient(1200px 480px at 70% -10%, rgba(2,164,228,.25), transparent 60%), linear-gradient(180deg, rgba(1,21,118,1) 0%, rgba(1,21,118,.9) 60%, rgba(1,21,118,.85) 100%);color:#fff}
     .hero .container{padding-top:48px;padding-bottom:56px}
@@ -33,7 +34,12 @@
     .search form{display:grid;grid-template-columns:1fr 1fr 1fr auto;gap:12px}
     .field{display:flex;flex-direction:column;gap:6px}
     label{font-size:12px;color:var(--muted)}
-    select,input[type=date]{width:100%;padding:14px 12px;border-radius:12px;border:1.5px solid #e5e7eb;font-size:15px;min-height:48px}
+    select,input[type=date]{width:100%;padding:14px 42px 14px 14px;border-radius:12px;border:1.5px solid #e5e7eb;font-size:15px;min-height:48px;background-color:#fff;box-shadow:0 6px 18px rgba(1,21,118,.08);transition:border-color .2s ease, box-shadow .2s ease, transform .05s ease;-webkit-appearance:none;-moz-appearance:none;appearance:none;background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none' stroke='%23011576' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");background-repeat:no-repeat;background-position:right 12px center;background-size:18px 18px}
+    select:hover,input[type=date]:hover{border-color:#cbd5e1}
+    select:focus,input[type=date]:focus{border-color:var(--brand);box-shadow:0 0 0 4px rgba(1,21,118,.12),0 6px 18px rgba(1,21,118,.12)}
+    select:active{transform:translateY(0.5px)}
+    select::-ms-expand{display:none}
+
     .swap{align-self:end}
     .swap button{width:100%;padding:14px;border-radius:12px;border:1.5px dashed #cbd5e1;background:#f8fafc;font-weight:600;min-height:48px}
     .primary{background:var(--brand);color:#fff;border:none;border-radius:12px;padding:14px 16px;font-weight:700;min-height:48px}
@@ -45,8 +51,10 @@
     .card{background:var(--card);border-radius:16px;padding:16px;border:1px solid #eaecf0;display:grid;grid-template-columns:auto 1.2fr .8fr auto;gap:14px;align-items:center}
     .card .title{font-weight:800}
     .chip{display:inline-flex;align-items:center;gap:6px;padding:10px 12px;border-radius:999px;background:#f1f5f9;color:#0f172a;font-size:14px;min-height:40px;border:0;cursor:pointer}
+    .chip.active{background:var(--brand);color:#fff}
     .money{font-weight:900;font-size:22px;color:var(--brand)}
     .thumb{width:110px;height:68px;object-fit:cover;border-radius:12px;border:1px solid #e5e7eb;background:#f8fafc}
+    .hint{font-size:12px;color:var(--muted);margin-top:6px}
 
     footer{background:#0b1026;color:#cbd5e1}
     footer .container{padding:26px 20px}
@@ -120,7 +128,7 @@
   <section id="hasil" class="section">
     <div class="container">
       <h2 style="margin:0 0 8px">PO Tersedia</h2>
-      <p id="resultMeta" style="margin:0 0 16px;color:var(--muted)">Masukkan rute & tanggal, lalu klik <b>Cari Bus</b>.</p>
+      <p id="resultMeta" style="margin:0 0 16px;color:var(--muted)">Masukkan rute & tanggal, lalu klik <b>Cari Bus</b>. Pilih jam berangkat untuk mengaktifkan tombol.</p>
       <div id="cards" class="results"></div>
     </div>
   </section>
@@ -197,7 +205,7 @@
     const key = `${from}-${to}`;
     const mult = PRICE_MULT[key] ?? 1;
 
-    q('#resultMeta').innerHTML = `Hasil untuk <b>${from} → ${to}</b> tanggal <b>${formatDateID(date)}</b>. Jam keberangkatan sesuai masing-masing PO.`;
+    q('#resultMeta').innerHTML = `Hasil untuk <b>${from} → ${to}</b> tanggal <b>${formatDateID(date)}</b>. Pilih jam berangkat untuk mengaktifkan tombol.`;
 
     const list = PO_LIST
       .filter(po => !po.routes || po.routes.length===0 || po.routes.includes(key))
@@ -222,22 +230,31 @@
       if(src){ img.src = src; img.alt = po.name; } else { img.style.display='none'; }
 
       const left = el('div');
-      left.innerHTML = `<div class="title">${po.name}</div>\n        <div style="color:var(--muted);font-size:14px">${po.type} • ${po.seats} seat</div>`;
+      left.innerHTML = `<div class="title">${po.name}</div>\n        <div style=\"color:var(--muted);font-size:14px\">${po.type} • ${po.seats} seat</div>`;
 
       const mid = el('div');
+      let selectedTime = null;
       const times = el('div'); times.style.display='flex'; times.style.flexWrap='wrap'; times.style.gap='8px';
       po.times.forEach((s)=>{
         const chip = el('button','chip');
         chip.type='button'; chip.textContent = `${s.time}`;
-        chip.onclick = ()=> selectAndSend(po, s.time, ctx);
+        chip.onclick = ()=>{
+          selectedTime = s.time;
+          Array.from(times.querySelectorAll('.chip')).forEach(c=>c.classList.remove('active'));
+          chip.classList.add('active');
+          btn.disabled = false;
+        };
         times.appendChild(chip);
       });
-      mid.append(times);
+      const hint = el('div','hint');
+      hint.textContent = 'Pilih Jam keberangkatan';
+      mid.append(times, hint);
 
       const right = el('div');
       right.innerHTML = `<div class="money">${rupiah(po.price)}</div>`;
       const btn = el('button','btn'); btn.textContent='Kirim ke WhatsApp';
-      btn.onclick = ()=> selectAndSend(po, po.times[0].time, ctx);
+      btn.disabled = true;
+      btn.onclick = ()=> { if(!selectedTime) return; selectAndSend(po, selectedTime, ctx); };
       right.append(btn);
 
       card.append(img, left, mid, right);
@@ -246,9 +263,9 @@
   }
 
   function selectAndSend(po, time, ctx){
-    const msg = `Halo Admin multibus,\n\nSaya ingin pesan tiket:\n• Rute: ${ctx.from} → ${ctx.to}\n• Tanggal: ${formatDateID(ctx.date)}\n• Jam: ${time}\n• PO: ${po.name} (${po.type})\n• Harga: ${rupiah(po.price)}\n\nTolong bantu proses ya. Terima kasih.`;
+    const msg = `Halo Admin multibus,%0A%0ASaya ingin pesan tiket:%0A• Rute: ${ctx.from} → ${ctx.to}%0A• Tanggal: ${formatDateID(ctx.date)}%0A• Jam: ${time}%0A• PO: ${po.name} (${po.type})%0A• Harga: ${rupiah(po.price)}%0A%0ATolong bantu proses ya. Terima kasih.`;
     const phone = '6285255877227';
-    const wa = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
+    const wa = `https://wa.me/${phone}?text=${msg}`;
     window.open(wa,'_blank');
   }
 
